Fix MySQL connection, update backend env vars

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PC Part Picker - Build Your Dream PC</title>
-    <meta name="description" content="Build your dream PC with our comprehensive PC part picker tool. Check compatibility, compare prices, and create the perfect build." />
+    <title>PC Builder - Build Your Dream PC</title>
+    <meta name="description" content="Build your dream PC with our comprehensive PC builder tool. Check compatibility, compare prices, and create the perfect build." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
